2020-03-28  Robby Stephenson  <robby@periapsis.org>

	* Improved audio file data importer to use Album Artist (Bug 419348).
	* Added notification if user agent is diabled and data source
	requires it (Bug 419319).

2020-02-28  Robby Stephenson  <robby@periapsis.org>

	* Updated data source endpoint for TheGamesDB.net.

2020-02-26  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with writing invalid XML names (Bug 418067).

2020-01-25  Robby Stephenson  <robby@periapsis.org>

	* Improved MobyGames fetcher (Bug 416718).

2019-12-10  Robby Stephenson  <robby@periapsis.org>

	* Added data source for colnect.net.

2019-11-25  Robby Stephenson  <robby@periapsis.org>

	* Fixed performance regression when loading data file.
	* Released Tellico 3.2.3.

2019-11-09  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.2.2.

2019-10-20  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug to revert to behavior of selecting newly added entries (Bug 413217).

2019-10-06  Robby Stephenson  <robby@periapsis.org>

	* Added importer for LibraryThing.com JSON collection files (Bug 411095).

2019-08-04  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with calculating relative file links (Bug 410551).

2019-07-09  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.2.1.

2019-07-06  Robby Stephenson  <robby@periapsis.org>

	* Fixed selection bug when modifying an entry after selection changed (Bug 391614).

2019-07-01  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with not updating status bar when cancelling an entry update (Bug 325591).

2019-06-16  Robby Stephenson  <robby@periapsis.org>

	* Fixed file preview generation.
	* Added data source for Kino-Teatr.ua.

2019-05-25  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.2.

2019-05-24  Robby Stephenson  <robby@periapsis.org>

	* Updated data source for TheGamesDB.net (Bug 407811).

2019-04-18  Robby Stephenson  <robby@periapsis.org>

	* Added data source for ComicVine.com.
